--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Progs">
         <activity
+            android:name=".MainWindow"
+            android:exported="false" />
+        <activity
+            android:name=".sing_out"
+            android:exported="false" />
+        <activity
+            android:name=".sing_in"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
