--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,13 @@ android {
     compileSdk 28
 
     defaultConfig {
-        applicationId "com.example.progs"
-        minSdk 28
+        minSdk 22
         targetSdk 28
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        // adding by myself
+        // for animation
+        vectorDrawables.useSupportLibrary=true
     }
 
     buildTypes {
@@ -26,14 +26,49 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildToolsVersion '32.0.0'
+
+    //ENADLE VIEW BINDING (OPTIONAL)
+
+    buildFeatures{
+        viewBinding true
+    }
 }
 
 dependencies {
 
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+
+    implementation 'com.google.firebase:firebase-firestore:24.0.0'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.google.firebase:firebase-database:20.0.3'
-    testImplementation 'junit:junit:4.+'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:29.0.3')
+    // Declare the dependency for the Firebase Authentication library
+
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.google.android.gms:play-services-safetynet:18.0.1'
+    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0-beta04'
+
+
+
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-common-ktx:20.0.0'
+    implementation 'com.google.android.gms:play-services-auth:20.0.1'
+
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    //FLOATING BUTTON
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
+    //Different image shapes
+    implementation 'com.google.android.material:material:1.2.1'
 }
